@@ -45,11 +45,11 @@ public abstract class BaseService implements Service {
 
   /**
    * Initializes the service.
-   * <p/>
+   * <p>
    * It collects all service properties (properties having the
    * <code>#SERVER#.#SERVICE#.</code> prefix). The property names are then
    * trimmed from the <code>#SERVER#.#SERVICE#.</code> prefix.
-   * <p/>
+   * <p>
    * After collecting  the service properties it delegates to the
    * {@link #init()} method.
    *
@@ -79,7 +79,7 @@ public abstract class BaseService implements Service {
   /**
    * Post initializes the service. This method is called by the
    * {@link Server} after all services of the server have been initialized.
-   * <p/>
+   * <p>
    * This method does a NOP.
    *
    * @throws ServiceException
@@ -93,7 +93,7 @@ public abstract class BaseService implements Service {
   /**
    * Destroy the services.  This method is called once, when the
    * {@link Server} owning the service is being destroyed.
-   * <p/>
+   * <p>
    * This method does a NOP.
    */
   @Override
@@ -103,7 +103,7 @@ public abstract class BaseService implements Service {
   /**
    * Returns the service dependencies of this service. The service will be
    * instantiated only if all the service dependencies are already initialized.
-   * <p/>
+   * <p>
    * This method returns an empty array (size 0)
    *
    * @return an empty array (size 0).
@@ -115,7 +115,7 @@ public abstract class BaseService implements Service {
 
   /**
    * Notification callback when the server changes its status.
-   * <p/>
+   * <p>
    * This method returns an empty array (size 0)
    *
    * @param oldStatus
@@ -162,7 +162,7 @@ public abstract class BaseService implements Service {
   /**
    * Returns the service configuration properties. Property
    * names are trimmed off from its prefix.
-   * <p/>
+   * <p>
    * The sevice configuration properties are all properties
    * with names starting with <code>#SERVER#.#SERVICE#.</code>
    * in the server configuration.
@@ -177,9 +177,8 @@ public abstract class BaseService implements Service {
 
   /**
    * Initializes the server.
-   * <p/>
-   * This method is called by {@link #init(Server)} after all service
-   * properties
+   * <p>
+   * This method is called by {@link #init(Server)} after all service properties
    * (properties prefixed with
    *
    * @throws ServiceException
